# rkdeveloptool

./: .gitignore  meson.build
cross/: aarch64-linux-gnu.ini  arm-linux-gnueabihf.ini
